# ScanForge

./: .gitignore  CORE.md  ENGINEERING_SPEC.md  INSTRUCTIONS.md  PLANS.md  PROJECT_STATUS_REPORT.md  README.md  ROADMAP_UPDATED.md  STAGE_2_EXECUTION_PLAN.md  STAGE_3_VERIFICATION_CHECKLIST.md  ScanForge_STAGE3_EXECUTION_PLAN.md  ScanForge_STAGE4_EXECUTION_PLAN.md  UX_SPEC.md  collab-server.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  GRAPH_REPORT.md  graph.json
graphify-out/cache/: stat-index.json
scanforge/docs/: AI_OPERATING_SYSTEM.md  ARCHITECTURE.md  BACKLOG.md  CURRENT_STAGE.md  DECISIONS.md  IDEA_INBOX.md  OPERATIONS.md  PROVIDER_STRATEGY.md  README_PROJECT_SYSTEM.md  ROADMAP.md  STAGE_GATE.md  TESTING_STRATEGY.md  VISION.md
server/: README.md  main.py  pipeline.py  requirements.txt
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: domain_storage.rs  imagick.rs  lib.rs  main.rs  ocr.rs  storage.rs  translation.rs
src-tauri/src/ocr/: detect.py  detect.rs  easy.rs  easy_ocr.py  manga.rs  manga_ocr.py  paddle.rs  paddle_ocr.py  preview.rs  provider.rs  tesseract.rs  windows.rs  windows_ocr.ps1
templates/: bug-report-template.md  code-review-template.md  decision-record.md  provider-template.md  refactor-request-template.md  stage-template.md  task-template.md
(+243 files in other folders)
