[package]
name = "scanforge"
version = "0.1.0"
description = "Local-first scanlation studio shell"
edition = "2021"

[package.metadata.tauri]

[lib]
name = "scanforge_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "scanforge"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
image = "0.25"
tempfile = "3"
